Add reference data files for verification studies and reset script
- Created new reference CSV files for various cases in the Diederichsen and Hatton verification studies (fig3a, fig3b, fig3c, fig3d, fig3e).
- Added a shell script (Allreset) to facilitate cleanup of generated files, ensuring it cannot be run from the template directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,8 @@
-**/0/*
-**/0.[0-9]*
-**/[1-9]*
-**/constant/extendedFeatureEdgeMesh
-**.eMesh
-**/constant/polyMesh/*
-**/dynamicCode
-**/*.foam
-**/log*
-**/*.pyc
-**/processor*
-**/platforms*
-**/linux64*
-**/dynamicCode/*
-**/PostProcessing/*
-**/points
-**/__pycache__/*
-**/._DS_Store
-**/*.stl
-**/*.svg
+# Ignore all files in the diederichsen-and-hatton directory, except for the Allplot files and the data.csv files
+**/diederichsen-and-hatton/**/*
+!**/diederichsen-and-hatton/**/
+!**/diederichsen-and-hatton/**/initialise.sh
+!**/diederichsen-and-hatton/**/overview
+!**/diederichsen-and-hatton/**/ref*.csv
+!**/diederichsen-and-hatton/**/Allreset
+!**/diederichsen-and-hatton/template
